src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dwP0.25-dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: P0.25\ndefault window height: F500\nborder on"
expression: snapshot
---
initial configure:
size: 1240 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 500, bounds: 1240 × 680, states: [Activated]
